# swear-words

./: hungarian_swear_words.txt  own_collection.txt  pyproject.toml
src/: merge_dictionaries.py
